# master-thesis

./: .gitignore  pyproject.toml
scripts/: MIAKO.ipynb  moment_curvature.ipynb  non_zero_axial_force.ipynb  section_properties.ipynb
src/: README.md  glossary.tex  reference.bib  thesis.bcf  thesis.bib  thesis.ist  thesis.run.xml  thesis.tex
src/assets/: jupyter_settings.tex
src/assets/figures/diagrams/: Untitled Diagram.drawio
src/assets/figures/framesss/: coordinate_transformation.tex  deformed_beam_configuration.tex  element_fef_dofs.tex  example_coordinate_systems.tex  fixed_clamped_beam.tex  geometrical_eqns.tex  global_dofs.tex  load_types.tex  positive_internal_forces.tex  static_condensation.tex  stress_strain.tex
src/chapters/: conclusion.tex  introduction.tex  overview-discussion.tex
src/chapters/chapter-1/: introduction.tex
src/chapters/desssign/: desssign.tex
src/chapters/framesss/: approximate_solution.tex  bar_equations.tex  eb_beam_equations.tex  framesss.tex  governing_equations.tex  principle_of_virtual_work.tex  static_condensation.tex  timoshenko.tex  transformation.tex
src/chapters/framesss/implementation/: algorithms.tex  architecture.tex  assumptions.tex  example.tex  example_jupyter_nb.tex  implementation.tex  instalation.tex  sparse.tex  third-party-sw.tex  validation.tex
src/chapters/framesss/unused/: dev_tools.tex  direct-stiffness-method.tex  variational_principles.tex
src/chapters/miakosections/: miakosections.tex
src/chapters/wbapp/: wbapp.tex
src/common/: ctuth-core.tex  ctuth-names.tex  ctuth-pkg.tex
(+7 files in other folders)
