[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Daniel Beranek <daniel.beraanek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
sectionproperties = {extras = ["numba", "pardiso"], version = "^3.2.1"}
concreteproperties = "^0.6.2"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
