[tool.poetry]
name = "master-thesis"
version = "0.1.0"
description = ""
authors = ["Daniel Beranek <daniel.beraanek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
sectionproperties = {extras = ["numba", "pardiso"], version = "^3.2.1"}
concreteproperties = "^0.6.2"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
sympy = "^1.12"
miakosections = "^0.1.0"
framesss = "^0.0.3"
tabulate = "^0.9.0"
py2puml = "^0.9.1"
desssign = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
